# visen

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
api/: main.py  ollama_compat.py  openai_compat.py
benchmark/: jailbreakbench_fast_20260621_082849.json  multijail_fast_20260621_082111.json
config/: config.yml
config/policy/: pii_recognizers.yml  reframe_templates.yml
config/rails/: flows.co
data/: decree_articles.json
docs/superpowers/specs/: 2026-06-20-v-sentinel-design.md
eval/: multijail_vi.json  multijail_vi.py  run_eval.py  xstest_vi.json
examples/: custom_backend.py  decorator.py  offline_fake_backend.py  quickstart.py
material/report/: v-sentinel-report.tex
src/vsentinel/: __init__.py  backends.py  cli.py  client.py  config.py  detect.py  domains.py  generate.py  guard_client.py  integrations.py  normalize.py  ollama_client.py  pii.py  pipeline.py  policy.py  rails_actions.py  resources.py  retrieve.py  schema.py  sentinel.py  verify.py
src/vsentinel/resources/policy/: domain_policy.yml  jailbreak_patterns.yml  legal_policy.yml  pii_recognizers.yml
src/vsentinel/retrievers/: __init__.py  devices.py  driver.py  embedder.py  fallback.py  fusion.py  hybrid.py  neo4j_config.py  neo4j_retriever.py  reranker.py  text_utils.py  translator.py
src/vsentinel/server/: __init__.py  app.py  ollama_compat.py  openai_compat.py  proxy_common.py  store.py
tests/: conftest.py  test_api.py  test_cli.py  test_client.py  test_config.py  test_detect.py  test_domains.py  test_eval.py  test_fallback.py  test_generate.py  test_guard_client.py  test_hybrid.py  test_integrations.py  test_neo4j_retriever.py  test_normalize.py  test_ollama_client.py  test_pii.py  test_pipeline.py  test_policy.py  test_rails_actions.py  test_retrieve.py  test_schema.py  test_sentinel.py  test_text_utils.py  test_verify.py
web/: index.html
web/static/: app.css  app.js
