[project]
name = "vsentinel"
version = "0.1.0"
description = "V-Sentinel: dual-control guardrail (jailbreak + ND-142/2026 compliance) for Vietnamese chatbots"
readme = "README.md"
authors = [
    { name = "TyrusRC", email = "63230297+TyrusRC@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "nemoguardrails>=0.22.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.49.0",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
]
