[project]
name = "vsentinel"
version = "0.2.0"
description = "V-Sentinel: dual-control guardrail (jailbreak + ND-142/2026 compliance) for Vietnamese chatbots"
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "TyrusRC", email = "63230297+TyrusRC@users.noreply.github.com" }
]
keywords = ["guardrail", "llm-security", "jailbreak", "prompt-injection", "vietnamese", "ai-compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Natural Language :: Vietnamese",
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "nemoguardrails>=0.22.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "uvicorn>=0.49.0",
]

[project.optional-dependencies]
neo4j = [
    "neo4j>=5.0",
    "sentence-transformers>=3.0",
    "transformers>=4.40",
    "sentencepiece>=0.2",
    "torch>=2.0",
]

[project.scripts]
vsentinel = "vsentinel.cli:main"

[project.urls]
Homepage = "https://github.com/2vane/visen"
Repository = "https://github.com/2vane/visen"

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "respx>=0.23.1",
    "python-dotenv>=1.0",
]
